Changed macro name `include_HEADERS' to `pkginclude_HEADERS' in nmz/Makefile.am.

--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,13 +1,13 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.4 1999-11-02 08:56:24 satoru Exp $
+# $Id: Makefile.am,v 1.5 1999-11-05 08:59:59 knok Exp $
 #
 
 AUTOMAKE_OPTIONS = no-dependencies
 
 INCLUDES = -I../lib -I../src -I../intl
 
-include_HEADERS = libnamazu.h
+pkginclude_HEADERS = libnamazu.h
 lib_LTLIBRARIES = libnmz.la
 
 libnmz_la_SOURCES = libnamazu.c libnamazu.h
