--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,18 +15,19 @@ bin_SCRIPTS  = gcnmz mailutime mknmz gtnmz vfnmz kwnmz
 
 CLEANFILES  = gcnmz mknmz kwnmz
 
-localedir = $(datadir)/locale
-INCLUDES  = -I.. -I../intl -I../lib -I../nmz
-DEFS = -DLOCALEDIR=\"$(localedir)\" \
-       -DOPT_INDEXDIR=\"${localstatedir}/${PACKAGE}/index\" \
-       -DOPT_CONFDIR=\"${sysconfdir}/${PACKAGE}\" \
-       @DEFS@
-LDADD = @INTLLIBS@ ../lib/libnmzut.a $(top_srcdir)/nmz/libnmz.la
-
+localedir   = $(datadir)/locale
 confdir     = $(sysconfdir)/$(PACKAGE)
-perllibdir  = $(pkgdatadir)/pl
 filterdir   = $(pkgdatadir)/filter
+indexdir    = $(localstatedir)/$(PACKAGE)/index
+perllibdir  = $(pkgdatadir)/pl
 templatedir = $(pkgdatadir)/template
+
+DEFS = -DLOCALEDIR=\"$(localedir)\" \
+       -DOPT_CONFDIR=\"$(confdir)\" \
+       -DOPT_INDEXDIR=\"$(indexdir)\" \
+       @DEFS@
+INCLUDES  = -I.. -I../intl -I../lib -I../nmz
+LDADD = @INTLLIBS@ ../lib/libnmzut.a $(top_srcdir)/nmz/libnmz.la
 
 namazu_SOURCES = cgi.c codeconv.c conf.c field.c form.c \
 		 hlist.c i18n.c namazu.c output.c \
@@ -36,8 +37,6 @@ namazu_SOURCES = cgi.c codeconv.c conf.c field.c form.c \
 		 hlist.h i18n.h magic.h message.h namazu.h output.h \
 		 parser.h re.h result.h search.h \
 		 usage.h  util.h wakati.h var.h idxname.h
-
-##################################################################
 
 SUFFIXES = .pl
 .pl:
