--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,17 +1,7 @@
+nmz/conf.c
+nmz/search.c
+nmz/wakati.c
 src/cgi.c
-src/codeconv.c
-src/conf.c
-src/field.c
-src/form.c
-src/hlist.c
 src/namazu.c
 src/output.c
-src/parser.c
-src/re.c
-src/result.c
-src/search.c
-src/seed.c
 src/usage.c
-src/util.c
-src/var.c
-src/wakati.c
