Many changes. See ChangeLog.

--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,11 +1,11 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.8 1999-11-08 08:50:34 satoru Exp $
+# $Id: Makefile.am,v 1.9 1999-11-08 09:17:36 knok Exp $
 #
 
 AUTOMAKE_OPTIONS = no-dependencies
 
-INCLUDES = -I.. -I../lib -I../src -I../intl -I../nmz
+INCLUDES = -I. -I.. -I../lib -I../src -I../intl -I../nmz
 localedir   = $(datadir)/locale
 confdir     = $(sysconfdir)/$(PACKAGE)
 indexdir    = $(localstatedir)/$(PACKAGE)/index
