--- a/src/mknmz.pl.in
+++ b/src/mknmz.pl.in
@@ -1,7 +1,7 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.74 1999-11-05 05:29:53 masao Exp $
+# $Id: mknmz.pl.in,v 1.75 1999-11-14 22:54:00 kenzo- Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -133,7 +133,8 @@ sub main () {
 sub read_config () {
     my (@cand) = ();
     push @cand, $ConfigFile if defined $ConfigFile;
-    push @cand, "$ENV{'HOME'}/.mknmzrc", "$CONFDIR/mknmzrc";
+    push @cand, "$ENV{'HOME'}/.mknmzrc", "$CONFDIR/mknmzrc"
+    	if (define($ENV{'HOME'}));
 
     for my $conf (@cand) {
 	if (-f $conf) {
