--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,6 +1,6 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.12 1999-11-16 06:32:50 knok Exp $
+# $Id: Makefile.am,v 1.13 1999-11-17 09:39:59 satoru Exp $
 #
 
 AUTOMAKE_OPTIONS = no-dependencies
@@ -21,7 +21,7 @@ lib_LTLIBRARIES = libnmz.la
 
 libnmz_la_SOURCES = libnamazu.c libnamazu.h codeconv.c codeconv.h conf.c \
 	conf.h critical.h field.c field.h hlist.c hlist.h \
-	idxname.c idxname.h magic.h parser.c perser.h re.c re.h \
+	idxname.c idxname.h magic.h parser.c parser.h re.c re.h \
 	search.c search.h seed.c util.c util.h var.c var.h \
 	wakati.c wakati.h i18n.c i18n.h regex.c regex.h
 
