--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.54 1999-11-03 23:36:52 rug Exp $
+dnl $Id: configure.in,v 1.55 1999-11-18 02:35:01 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -14,7 +14,7 @@ dnl * Process this file with autoconf to produce a configure script.
 dnl *
 AC_INIT(src/cgi.c)
 AC_PREREQ(2.13)               dnl Minimum Autoconf version required.
-AM_INIT_AUTOMAKE(namazu, 1.9.7)
+AM_INIT_AUTOMAKE(namazu, 1.9.8)
 
 dnl *
 dnl * libtool
