--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,6 +1,6 @@
 man_MANS = namazu.1 mknmz.1
 
-all: namazu.1 mknmz.1
+update-man: namazu.1 mknmz.1
 
 namazu.1: ../src/namazu
 	LANG=C help2man -N ../src/namazu > $@
