--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,11 +1,7 @@
 man_MANS = namazu.1 mknmz.1
 
-update-man: namazu.1 mknmz.1
-
-namazu.1: ../src/namazu
+update-man:
 	LANG=C help2man -N ../src/namazu > $@
-
-mknmz.1: ../src/mknmz
 	LANG=C help2man -N ../src/mknmz > $@
 
 clean:
