--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,8 +1,8 @@
 man_MANS = namazu.1 mknmz.1
 
 update-man:
-	LANG=C help2man -N ../src/namazu > $@
-	LANG=C help2man -N ../src/mknmz > $@
+	LANG=C help2man -N ../src/namazu > namazu.1
+	LANG=C help2man -N ../src/mknmz > mknmz.1
 
 clean:
 	rm $(man_MANS)
