--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,6 +1,6 @@
 man_MANS = namazu.1 mknmz.1
 
 update-man:
-	LANG=C help2man -N ../src/namazu > namazu.1
-	LANG=C help2man -N ../src/mknmz > mknmz.1
+	LANG=C help2man --no-info ../src/namazu > namazu.1
+	LANG=C help2man --no-info ../src/mknmz > mknmz.1
 
