--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,4 +1,7 @@
+# Process this file with automake to produce Makefile.in
+
 man_MANS = namazu.1 mknmz.1
+EXTRA_DIST = $(man_MANS)
 
 update-man:
 	LANG=C help2man --no-info ../src/namazu > namazu.1
