--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,6 +1,6 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.16 1999-11-23 12:58:31 satoru Exp $
+# $Id: Makefile.am,v 1.17 1999-11-23 14:18:33 satoru Exp $
 #
 
 AUTOMAKE_OPTIONS = no-dependencies
@@ -15,13 +15,13 @@ DEFS = -DLOCALEDIR=\"$(localedir)\" \
        @DEFS@
 
 pkginclude_HEADERS = libnamazu.h codeconv.h conf.h field.h hlist.h \
-	idxname.h magic.h parser.h re.h search.h util.h var.h wakati.h i18n.h \
+	idxname.h parser.h re.h search.h util.h var.h wakati.h i18n.h \
 	regex.h
 lib_LTLIBRARIES = libnmz.la
 
 libnmz_la_SOURCES = libnamazu.c libnamazu.h codeconv.c codeconv.h conf.c \
 	conf.h field.c field.h hlist.c hlist.h \
-	idxname.c idxname.h magic.h parser.c parser.h re.c re.h \
+	idxname.c idxname.h parser.c parser.h re.c re.h \
 	search.c search.h seed.c util.c util.h var.c var.h \
 	wakati.c wakati.h i18n.c i18n.h regex.c regex.h
 
