See ChangeLog.         * src/mknmz.pl.in: Modify make_summary function.
        * pl/util.pl: Fix islang function bug.

        * filter/pdf.pl: Add $fields->{'title'} before
        gfilter::show_filter_debug_info.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -14,6 +14,7 @@ filter_DATA = bzip2.pl \
 	     pdf.pl \
 	     rfc.pl \
 	     msword.pl \
+	     olemsword.pl \
 	     oleexcel.pl \
 	     olepowerpoint.pl \
 	     ichitaro456.pl
