--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,8 +1,8 @@
-# $Id: Makefile.am,v 1.3 1999-11-16 06:32:49 knok Exp $ 
+# $Id: Makefile.am,v 1.4 1999-11-28 23:50:31 satoru Exp $ 
 AUTOMAKE_OPTIONS = no-dependencies
 
 EXTRA_DIST = memcmp.c strcspn.c vsnprintf.c memmove.c strncasecmp.c \
-	     memset.c strcasecmp.c strstr.c
+	     memset.c strcasecmp.c strstr.c system.h
 
 noinst_LIBRARIES = libnmzut.a
 libnmzut_a_SOURCES = getopt.c getopt1.c getopt.h
