* nmz/rcfile.c (getenv_namazurc): Moved from libnamazu.c. 	(load_conf): Remove unnecessary codes: BASE_URI[0] = '\0'; 	(open_conf_file): Call getenv_namazurc at the first. 	(set_namazurc): Moved from libnamazu.c. 	(rcfile_is_loaded): Renamed from ConfLoaded. 	(show_rcfile): Renamed from show_conf. 	(load_rcfile): Renamed from load_conf. 	(open_rcfile): Renamed from open_conf_file. 	(get_rc_args): Renamed from get_conf_args. 	(get_rc_arg): Renamed from get_conf_arg. 	(parse_rcfile): Renamed from parse_conf. 	(apply_rc): Renamed from apply_conf.
	* nmz/Makefile.am: s/conf.([ch])/rcfile.$1/g;

	* nmz/rcfile.c: Renamed from conf.c

	* nmz/rcfile.h: Renamed from conf.h

	* nmz/var.c: Remove a variable: char NAMAZURC[BUFSIZE] = "";

	* src/namazu.c (main): Remove getenv_namazurc() calling.

	* src/namazu.c (make_fullpathname_msg): Moved from libnamazu.c

--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,6 +1,6 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.18 1999-12-04 09:28:53 satoru Exp $
+# $Id: Makefile.am,v 1.19 1999-12-07 09:14:01 satoru Exp $
 #
 
 AUTOMAKE_OPTIONS = no-dependencies
@@ -14,13 +14,13 @@ DEFS = -DLOCALEDIR=\"$(localedir)\" \
        -DOPT_INDEXDIR=\"$(indexdir)\" \
        @DEFS@
 
-pkginclude_HEADERS = libnamazu.h codeconv.h conf.h field.h hlist.h \
+pkginclude_HEADERS = libnamazu.h codeconv.h rcfile.h field.h hlist.h \
 	idxname.h parser.h re.h search.h util.h var.h wakati.h i18n.h \
 	regex.h
 lib_LTLIBRARIES = libnmz.la
 
-libnmz_la_SOURCES = libnamazu.c libnamazu.h codeconv.c codeconv.h conf.c \
-	conf.h field.c field.h hlist.c hlist.h \
+libnmz_la_SOURCES = libnamazu.c libnamazu.h codeconv.c codeconv.h rcfile.c \
+	rcfile.h field.c field.h hlist.c hlist.h \
 	idxname.c idxname.h parser.c parser.h re.c re.h \
 	search.c search.h seed.c util.c util.h var.c var.h \
 	wakati.c wakati.h i18n.c i18n.h regex.c regex.h \
