* Makefile.am (global): New command for using global. 	<http://www.tamacom.com/global/> 	(cxref): A tiny fix.

--- a/Makefile.am
+++ b/Makefile.am
@@ -57,10 +57,15 @@ cxref: stamp-h
 	if test ! -d cxref; then \
 	    $(mkinstalldirs) cxref; \
 	fi
-	cxref -html20-src -I . -I src -I nmz -I lib \
+	cxref -N namazu -html20-src -I . -I src -I nmz -I lib \
 	    -warn-all -index-all -xref-all -O cxref \
-	    {nmz,src,lib}/*.[ch] 1> cxref/warnings \
-				 2> cxref/errors
-	if test -s cxref/errors; then \
-	    cat cxref/errors \
-	fi
+	    {nmz,src,lib}/*.[ch] 1> cxref/warnings 
+
+
+global: HTAGS
+
+HTAGS: GTAGS
+	htags
+
+GTAGS:
+	gtags
