--- a/Makefile.am
+++ b/Makefile.am
@@ -61,6 +61,11 @@ cxref: stamp-h
 	    -warn-all -index-all -xref-all -O cxref \
 	    {src,nmz,lib}/*.[ch] 1> cxref/warnings 
 
+	# Two passes are needed for accurate cross referencing.
+	cxref -N namazu -html20-src -I . -I src -I nmz -I lib \
+	    -warn-all -index-all -xref-all -O cxref \
+	    {src,nmz,lib}/*.[ch] 1> cxref/warnings 
+
 
 global: HTAGS
 
