--- a/Makefile.am
+++ b/Makefile.am
@@ -59,12 +59,12 @@ cxref: stamp-h
 	fi
 	cxref -N namazu -html20-src -I . -I src -I nmz -I lib \
 	    -warn-all -index-all -xref-all -O cxref \
-	    {src,nmz,lib}/*.[ch] 1> cxref/warnings 
+	    {nmz,src,lib}/*.[ch] 1> cxref/warnings 
 
 	# Two passes are needed for accurate cross referencing.
 	cxref -N namazu -html20-src -I . -I src -I nmz -I lib \
 	    -warn-all -index-all -xref-all -O cxref \
-	    {src,nmz,lib}/*.[ch] 1> cxref/warnings 
+	    {nmz,src,lib}/*.[ch] 1> cxref/warnings 
 
 
 global: HTAGS
