* nmz/Makefile.am (libnmz_la_SOURCES): Add seed.h
	* configure.in (AM_INIT_AUTOMAKE): Change a version number to 1.9.9.

--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,6 +1,6 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.19 1999-12-07 09:14:01 satoru Exp $
+# $Id: Makefile.am,v 1.20 1999-12-09 12:03:18 satoru Exp $
 #
 
 AUTOMAKE_OPTIONS = no-dependencies
@@ -22,7 +22,7 @@ lib_LTLIBRARIES = libnmz.la
 libnmz_la_SOURCES = libnamazu.c libnamazu.h codeconv.c codeconv.h rcfile.c \
 	rcfile.h field.c field.h hlist.c hlist.h \
 	idxname.c idxname.h parser.c parser.h re.c re.h \
-	search.c search.h seed.c util.c util.h var.c var.h \
+	search.c search.h seed.c seed.h util.c util.h var.c var.h \
 	wakati.c wakati.h i18n.c i18n.h regex.c regex.h \
 	alias.c alias.h replace.c replace.h
 
