--- a/src/nmzgrep.in
+++ b/src/nmzgrep.in
@@ -4,9 +4,9 @@
 # nmzgrep - search namazu-indexed documents for a given pattern and 
 #           print lines matching the pattern.
 # 
-# $Id: nmzgrep.in,v 1.2 1999-12-11 01:13:50 satoru Exp $
+# $Id: nmzgrep.in,v 1.3 1999-12-11 01:20:02 satoru Exp $
 #
-# Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
+# Copyright (C) 1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
