--- a/template/NMZ.head.in
+++ b/template/NMZ.head.in
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rev=made href="mailto:@OPT_ADMIN_EMAIL@">
-<title>Namazu the full text retrieval search system</title>
+<title>Namazu a full text retrieval search system</title>
 <style type="text/css"><!--
   strong.keyword { color: Red; }
   p.example      { text-indent: 1em; 
@@ -57,8 +57,8 @@ This index contains <!-- FILE --> 0 <!-- FILE --> documents and
 <option selected value="score">by score
 <option value="date:late">by date in late order
 <option value="date:early">by date in early order
-<option value="field:title:ascending">by title in ascending order
-<option value="field:title:descending">by title in descending order
+<option value="field:subject:ascending">by title in ascending order
+<option value="field:subject:descending">by title in descending order
 <option value="field:from:ascending">by author in ascending order
 <option value="field:from:descending">by author in descending order
 <option value="field:size:ascending">by size in descending order
